[gd_scene load_steps=6 format=3 uid="uid://1fgbl20p1ria"]

[ext_resource type="Texture2D" uid="uid://8pb6ow40c312" path="res://asset/e1.png" id="1_jtjj8"]
[ext_resource type="Script" path="res://enemy_plane_02.gd" id="1_k7qgv"]
[ext_resource type="PackedScene" uid="uid://bu2wjucmi4l3i" path="res://bullet/bullet02.tscn" id="2_l5jfx"]
[ext_resource type="PackedScene" uid="uid://vm2024whbdv4" path="res://bomb.tscn" id="3_6l5eg"]
[ext_resource type="AudioStream" uid="uid://b5mk5sn6txis6" path="res://asset/bomb/bomb.mp3" id="5_g83kg"]

[node name="EnemyPlane02" type="Area2D"]
collision_mask = 12
script = ExtResource("1_k7qgv")
Bullet = ExtResource("2_l5jfx")
Bomb = ExtResource("3_6l5eg")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jtjj8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-39, -40, -37, -34, -14, -22, -2, -33, 13, -22, 37, -34, 36, -41, 54, -16, 3, 41, -3, 40, -55, -16)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="BulletTimer" type="Timer" parent="."]

[node name="BombAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g83kg")
volume_db = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
